--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "font-awesome": ">=4.1.0",
     "lodash": "~2.4.1",
     "angular-ui-router": "~0.2.10",
-    "angular-ui-select": "latest"
+    "angular-ui-select": "latest",
+    "angular-google-maps": "latest"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
